objects/Period_set__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <description>Hex # that represents the color of the template</description>
        <label>Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time_Text__c</fullName>
        <label>End Time Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Class?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Periods__c</fullName>
        <label>Number of Periods</label>
        <summaryForeignKey>Period_template__c.Period_set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time_Text__c</fullName>
        <label>Start Time Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Period Set</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Period set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Period sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>