objects/Period_set__c/listViews/Mercersburg.listView-meta.xml
<ListView>
    <fullName>Mercersburg</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Mercersburg</label>
</ListView>